test/semantic/good/jeffrey-test-badarrayindicies.mC
int foo(){
return 111;
}

int main(){
int b;
int a[30];
char c;
a[3*3*3*3*3*3*2+4*11+5-8*7] = 10;
a[b] = 10;
a[c] = 20;
a[2*2*c] = 20;
a[2*2*4+7*9+c]=40;
return 1;
}
