test/semantic/bad/jeffrey-test-weird4.mC
int main()
{
	int w;
	char b;
	a = 2;
	z = 3*4;
	b = 'a';
	b = a + b;
	w = b + a + 15 + 15 * 2; // should be 66
	e = 'y';
}

int a;
int z;
char e;